--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 nom = "8.0.0"
 quick-xml = "0.37.2"
+roxmltree = "0.20.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
