--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
-[package]
+[workspace]
+resolver = "2"
+members = [
+  "crates/*",
+]
+
+default-members = [
+  "crates/*",
+]
+
+[workspace.package]
 name = "yaxp"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-arrow = "54.0.0"
-nom = "8.0.0"
-quick-xml = "0.37.2"
-rayon = "1.10.0"
-roxmltree = "0.20.0"
-serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.138"
