--- a/crates/yaxp-common/Cargo.toml
+++ b/crates/yaxp-common/Cargo.toml
@@ -2,6 +2,11 @@
 name = "yaxp-common"
 version = "0.1.0"
 edition = "2024"
+authors = ["Jeroen <jeroen@flexworks.eu>"]
+description = "Yet Another XML Parser"
+homepage = "https://github.com/opensourceworks-org/yaxp"
+repository = "https://github.com/opensourceworks-org/yaxp/tree/main/crates/yaxp-common"
+license = "MIT"
 
 [dependencies]
 arrow = "54.0.0"
@@ -10,3 +15,6 @@ roxmltree = "0.20.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 pyo3 = { version = "0.23.3", features = ["extension-module", "serde"] }
+
+
+
