--- a/crates/pyaxp/pyproject.toml
+++ b/crates/pyaxp/pyproject.toml
@@ -4,6 +4,19 @@ build-backend = "maturin"
 
 [project]
 name = "pyaxp"
+description = "<yaxp-cli ⚡> Yet Another XSD Parser"
+readme = { file = "README.md", content-type = "text/markdown" }
+authors = [
+    { name = "Jeroen", email = "jeroen@flexworks.eu" }
+]
+
+[project.urls]
+Homepage = "https://github.com/opensourceworks-org/yaxp"
+Documentation = "https://github.com/opensourceworks-org/yaxp/blob/main/crates/pyaxp/README.md"
+Repository = "https://github.com/opensourceworks-org/yaxp/blob/main/crates/pyaxp"
+Bug Tracker = "https://github.com/opensourceworks-org/yaxp/issues"
+
+
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
