--- a/crates/yaxp-cli/Cargo.toml
+++ b/crates/yaxp-cli/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "yaxp-cli"
-version = "0.1.1"
-edition = "2024"
+version = "0.1.2"
+edition = "2021"
 
 [dependencies]
-clap = "4.5.27"
+clap = { version = "4.5.23", features = ["derive"] }
 yaxp-common = { path = "../yaxp-common" }
+serde = { version = "1.0.217", features = ["derive"] }
