chore: versioning deps

--- a/crates/yaxp-cli/Cargo.toml
+++ b/crates/yaxp-cli/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
-yaxp-common = { path = "../yaxp-common" }
+yaxp-common = { path = "../yaxp-common", version = "0.1.2" }
 serde = { version = "1.0.217", features = ["derive"] }
