--- a/crates/yaxp-common/Cargo.toml
+++ b/crates/yaxp-common/Cargo.toml
@@ -3,7 +3,7 @@ name = "yaxp-common"
 version = "0.1.2"
 edition = "2021"
 authors = ["Jeroen <jeroen@flexworks.eu>"]
-description = "Yet Another XML Parser"
+description = "<yaxp-cli ⚡> Yet Another XML Parser"
 homepage = "https://github.com/opensourceworks-org/yaxp"
 repository = "https://github.com/opensourceworks-org/yaxp/tree/main/crates/yaxp-common"
 license = "MIT"
