--- a/crates/yaxp-common/Cargo.toml
+++ b/crates/yaxp-common/Cargo.toml
@@ -15,6 +15,7 @@ roxmltree = "0.20.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 pyo3 = { version = "0.23.3", features = ["extension-module", "serde"] }
+indexmap = "2.7.0"
 
 
 
