--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -196,6 +196,6 @@ jobs:
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          working-directory: crates/pyaxp
+          working-directory: ../crates/pyaxp
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
