--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -186,6 +186,14 @@ jobs:
       attestations: write
     steps:
       - uses: actions/download-artifact@v4
+      - name: List directory structure
+        run: |
+          echo "Listing root:"
+          ls -la
+          echo "Listing crates directory:"
+          ls -la crates
+          echo "Listing pyaxp directory:"
+          ls -la crates/pyaxp
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
@@ -196,6 +204,6 @@ jobs:
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          working-directory: ../crates/pyaxp
+          #working-directory: crates/pyaxp
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
