--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -58,97 +58,97 @@ jobs:
           # Note: dist is created inside crates/pyaxp, so we give the full path.
           path: crates/pyaxp/dist
 
-  musllinux:
-    runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        working-directory: crates/pyaxp
-    strategy:
-      matrix:
-        platform:
-          - runner: ubuntu-22.04
-            target: x86_64
-          - runner: ubuntu-22.04
-            target: aarch64
-          - runner: ubuntu-22.04
-            target: armv7
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          working-directory: crates/pyaxp
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: 'true'
-          manylinux: musllinux_1_2
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-musllinux-${{ matrix.platform.target }}
-          path: crates/pyaxp/dist
-
-  windows:
-    runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        working-directory: crates/pyaxp
-    strategy:
-      matrix:
-        platform:
-          - runner: windows-latest
-            target: x64
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-          architecture: ${{ matrix.platform.target }}
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          working-directory: crates/pyaxp
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: 'true'
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-windows-${{ matrix.platform.target }}
-          path: crates/pyaxp/dist
-
-  macos:
-    runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        working-directory: crates/pyaxp
-    strategy:
-      matrix:
-        platform:
-          - runner: macos-13
-            target: x86_64
-          - runner: macos-14
-            target: aarch64
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          working-directory: crates/pyaxp
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          sccache: 'true'
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-macos-${{ matrix.platform.target }}
-          path: crates/pyaxp/dist
+#  musllinux:
+#    runs-on: ${{ matrix.platform.runner }}
+#    defaults:
+#      run:
+#        working-directory: crates/pyaxp
+#    strategy:
+#      matrix:
+#        platform:
+#          - runner: ubuntu-22.04
+#            target: x86_64
+#          - runner: ubuntu-22.04
+#            target: aarch64
+#          - runner: ubuntu-22.04
+#            target: armv7
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: 3.x
+#      - name: Build wheels
+#        uses: PyO3/maturin-action@v1
+#        with:
+#          working-directory: crates/pyaxp
+#          target: ${{ matrix.platform.target }}
+#          args: --release --out dist --find-interpreter
+#          sccache: 'true'
+#          manylinux: musllinux_1_2
+#      - name: Upload wheels
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wheels-musllinux-${{ matrix.platform.target }}
+#          path: crates/pyaxp/dist
+#
+#  windows:
+#    runs-on: ${{ matrix.platform.runner }}
+#    defaults:
+#      run:
+#        working-directory: crates/pyaxp
+#    strategy:
+#      matrix:
+#        platform:
+#          - runner: windows-latest
+#            target: x64
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: 3.x
+#          architecture: ${{ matrix.platform.target }}
+#      - name: Build wheels
+#        uses: PyO3/maturin-action@v1
+#        with:
+#          working-directory: crates/pyaxp
+#          target: ${{ matrix.platform.target }}
+#          args: --release --out dist --find-interpreter
+#          sccache: 'true'
+#      - name: Upload wheels
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wheels-windows-${{ matrix.platform.target }}
+#          path: crates/pyaxp/dist
+#
+#  macos:
+#    runs-on: ${{ matrix.platform.runner }}
+#    defaults:
+#      run:
+#        working-directory: crates/pyaxp
+#    strategy:
+#      matrix:
+#        platform:
+#          - runner: macos-13
+#            target: x86_64
+#          - runner: macos-14
+#            target: aarch64
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-python@v5
+#        with:
+#          python-version: 3.x
+#      - name: Build wheels
+#        uses: PyO3/maturin-action@v1
+#        with:
+#          working-directory: crates/pyaxp
+#          target: ${{ matrix.platform.target }}
+#          args: --release --out dist --find-interpreter
+#          sccache: 'true'
+#      - name: Upload wheels
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: wheels-macos-${{ matrix.platform.target }}
+#          path: crates/pyaxp/dist
 
   sdist:
     runs-on: ubuntu-latest
@@ -189,9 +189,9 @@ jobs:
       - name: List directory structure
         run: |
           echo "Listing root:"
-          ls -la
+          pwd 
           echo "Listing crates directory:"
-          ls -la crates
+          ls -la .
           echo "Listing pyaxp directory:"
           ls -la crates/pyaxp
       - name: Generate artifact attestation
