--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -176,7 +176,8 @@ jobs:
       run:
         working-directory: crates/pyaxp
     if: ${{ github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [linux, sdist]
+    # needs: [linux, musllinux, windows, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
