--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -152,9 +152,9 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: crates/pyaxp
+#    defaults:
+#      run:
+        #working-directory: crates/pyaxp
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
