--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -172,9 +172,9 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: crates/pyaxp
+#    defaults:
+#      run:
+#        working-directory: crates/pyaxp
     if: ${{ github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
     needs: [sdist]
     # needs: [linux, musllinux, windows, macos, sdist]
