--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -192,7 +192,11 @@ jobs:
         continue-on-error: true
 
       - name: List crates directory (if exists)
-        run: ls -la ${{ github.workspace }}/crates
+        run: ls -la ${{ github.workspace }}/..
+        continue-on-error: true
+
+      - name: List crates directory (if exists)
+        run: ls -la ${{ github.workspace }}/../crates/pyaxp
         continue-on-error: true
 
       - name: Generate artifact attestation
@@ -205,6 +209,6 @@ jobs:
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          #working-directory: crates/pyaxp
+#          working-directory: crates/pyaxp
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
