--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -188,17 +188,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
+      - name: copy crate to workspace
+        run: cp -r ${{ github.workspace }}/crates/pyaxp/* ${{ github.workspace }}/
+
       - name: List repository root
         run: ls -la ${{ github.workspace }}
         continue-on-error: true
 
-      - name: List crates directory (if exists)
-        run: ls -la ${{ github.workspace }}/../..
-        continue-on-error: true
-
-      - name: List crates directory (if exists)
-        run: ls -la ${{ github.workspace }}/../../crates/pyaxp
-        continue-on-error: true
+#      - name: List crates directory (if exists)
+#        run: ls -la ${{ github.workspace }}/
+#        continue-on-error: true
+#
+#      - name: List crates directory (if exists)
+#        run: ls -la ${{ github.workspace }}/../../crates/pyaxp
+#        continue-on-error: true
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
