--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -22,133 +22,133 @@ permissions:
   contents: read
 
 jobs:
-#  linux:
-#    runs-on: ${{ matrix.platform.runner }}
-#    # Defaults apply only to run: steps (not to actions that use "uses:")
-#    defaults:
-#      run:
-#        working-directory: crates/pyaxp
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: ubuntu-22.04
-#            target: x86_64
-#          - runner: ubuntu-22.04
-#            target: aarch64
-#          - runner: ubuntu-22.04
-#            target: armv7
-#
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: 3.x
-#      - name: Build wheels
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          working-directory: crates/pyaxp
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist --find-interpreter
-#          sccache: 'true'
-#          manylinux: auto
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-linux-${{ matrix.platform.target }}
-#          # Note: dist is created inside crates/pyaxp, so we give the full path.
-#          path: crates/pyaxp/dist
+  linux:
+    runs-on: ${{ matrix.platform.runner }}
+    # Defaults apply only to run: steps (not to actions that use "uses:")
+    defaults:
+      run:
+        working-directory: crates/pyaxp
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-22.04
+            target: x86_64
+          - runner: ubuntu-22.04
+            target: aarch64
+          - runner: ubuntu-22.04
+            target: armv7
 
-#  musllinux:
-#    runs-on: ${{ matrix.platform.runner }}
-#    defaults:
-#      run:
-#        working-directory: crates/pyaxp
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: ubuntu-22.04
-#            target: x86_64
-#          - runner: ubuntu-22.04
-#            target: aarch64
-#          - runner: ubuntu-22.04
-#            target: armv7
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: 3.x
-#      - name: Build wheels
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          working-directory: crates/pyaxp
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist --find-interpreter
-#          sccache: 'true'
-#          manylinux: musllinux_1_2
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-musllinux-${{ matrix.platform.target }}
-#          path: crates/pyaxp/dist
-#
-#  windows:
-#    runs-on: ${{ matrix.platform.runner }}
-#    defaults:
-#      run:
-#        working-directory: crates/pyaxp
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: windows-latest
-#            target: x64
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: 3.x
-#          architecture: ${{ matrix.platform.target }}
-#      - name: Build wheels
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          working-directory: crates/pyaxp
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist --find-interpreter
-#          sccache: 'true'
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-windows-${{ matrix.platform.target }}
-#          path: crates/pyaxp/dist
-#
-#  macos:
-#    runs-on: ${{ matrix.platform.runner }}
-#    defaults:
-#      run:
-#        working-directory: crates/pyaxp
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: macos-13
-#            target: x86_64
-#          - runner: macos-14
-#            target: aarch64
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: 3.x
-#      - name: Build wheels
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          working-directory: crates/pyaxp
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist --find-interpreter
-#          sccache: 'true'
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-macos-${{ matrix.platform.target }}
-#          path: crates/pyaxp/dist
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          working-directory: crates/pyaxp
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+          manylinux: auto
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-${{ matrix.platform.target }}
+          # Note: dist is created inside crates/pyaxp, so we give the full path.
+          path: crates/pyaxp/dist
+
+  musllinux:
+    runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: crates/pyaxp
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-22.04
+            target: x86_64
+          - runner: ubuntu-22.04
+            target: aarch64
+          - runner: ubuntu-22.04
+            target: armv7
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          working-directory: crates/pyaxp
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+          manylinux: musllinux_1_2
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-musllinux-${{ matrix.platform.target }}
+          path: crates/pyaxp/dist
+
+  windows:
+    runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: crates/pyaxp
+    strategy:
+      matrix:
+        platform:
+          - runner: windows-latest
+            target: x64
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+          architecture: ${{ matrix.platform.target }}
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          working-directory: crates/pyaxp
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-windows-${{ matrix.platform.target }}
+          path: crates/pyaxp/dist
+
+  macos:
+    runs-on: ${{ matrix.platform.runner }}
+    defaults:
+      run:
+        working-directory: crates/pyaxp
+    strategy:
+      matrix:
+        platform:
+          - runner: macos-13
+            target: x86_64
+          - runner: macos-14
+            target: aarch64
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          working-directory: crates/pyaxp
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist --find-interpreter
+          sccache: 'true'
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-macos-${{ matrix.platform.target }}
+          path: crates/pyaxp/dist
 
   sdist:
     runs-on: ubuntu-latest
@@ -176,8 +176,8 @@ jobs:
 #      run:
 #        working-directory: crates/pyaxp
     if: ${{ github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
-    needs: [sdist]
-    # needs: [linux, musllinux, windows, macos, sdist]
+    # needs: [sdist]
+    needs: [linux, musllinux, windows, macos, sdist]
     permissions:
       # Use to sign the release artifacts
       id-token: write
@@ -194,14 +194,6 @@ jobs:
       - name: List repository root
         run: ls -la ${{ github.workspace }}
         continue-on-error: true
-
-#      - name: List crates directory (if exists)
-#        run: ls -la ${{ github.workspace }}/
-#        continue-on-error: true
-#
-#      - name: List crates directory (if exists)
-#        run: ls -la ${{ github.workspace }}/../../crates/pyaxp
-#        continue-on-error: true
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
