--- a/crates/pyaxp/Cargo.toml
+++ b/crates/pyaxp/Cargo.toml
@@ -8,6 +8,7 @@ pyo3 = { version = "0.23.3", features = ["extension-module", "serde"] }
 yaxp-common = { path = "../yaxp-common", version = "0.1.7" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+arrow = "54.1.0"
 
 
 [lib]
