ci: update triggers

--- a/.github/workflows/yaxp-common-ci.yml
+++ b/.github/workflows/yaxp-common-ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'crates/yaxp-common/**'
+      - 'crates/yaxp-common/src/**'
 
 jobs:
   publish:
