--- a/.github/workflows/pyaxp-ci.yml
+++ b/.github/workflows/pyaxp-ci.yml
@@ -13,7 +13,7 @@ on:
     tags:
       - '*'
     paths:
-      - 'crates/pyaxp/**'
+      - 'crates/pyaxp/src/**'
   pull_request:
   workflow_dispatch:
 
