--- a/crates/yaxp-common/Cargo.toml
+++ b/crates/yaxp-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yaxp-common"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 authors = ["Jeroen <jeroen@flexworks.eu>"]
 description = "<yaxp-cli ⚡> Yet Another XML Parser"
@@ -16,6 +16,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 pyo3 = { version = "0.23.3", features = ["extension-module", "serde"] }
 indexmap = "2.7.0"
+polars = { version = "0.46.0", features = ["dtype-decimal"] }
 
 
 
