--- a/.github/workflows/yaxp-cli-ci.yml
+++ b/.github/workflows/yaxp-cli-ci.yml
@@ -1,4 +1,4 @@
-name: Publish yaxp-cli to crates.io
+name: Build & publish yaxp-cli to crates.io
 
 on:
   push:
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'crates/yaxp-cli/src/**'
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   publish:
