--- a/crates/pyaxp/pyproject.toml
+++ b/crates/pyaxp/pyproject.toml
@@ -12,13 +12,21 @@ authors = [
 
 
 
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+dependencies = [
+    "pytest>=8.3.4",
+    "numpy >1.24.4",
+    "polars>=1.8.2",
+    "pyarrow>=17.0.0",
+    "pyspark>=3.5.4",
+    "duckdb>=1.1.3",
+]
 [tool.maturin]
 features = ["pyo3/extension-module"]
 
