--- a/crates/yaxp-common/Cargo.toml
+++ b/crates/yaxp-common/Cargo.toml
@@ -17,6 +17,8 @@ serde_json = "1.0.138"
 pyo3 = { version = "0.23.3", features = ["extension-module", "serde"] }
 indexmap = "2.7.0"
 polars = { version = "0.46.0", features = ["dtype-decimal"] }
+encoding_rs_io = "0.1.7"
+encoding_rs = "0.8.35"
 
 
 
