--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ description = "Yet Another XML Parser"
 homepage = "https://github.com/opensourceworks-org/yaxp"
 repository = "https://github.com/opensourceworks-org/yaxp"
 license = "MIT"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
