--- a/crates/pyaxp/pyproject.toml
+++ b/crates/pyaxp/pyproject.toml
@@ -6,27 +6,29 @@ build-backend = "maturin"
 name = "pyaxp"
 description = "<yaxp-cli ⚡> Yet Another XSD Parser"
 readme = { file = "README.md", content-type = "text/markdown" }
-authors = [
-    { name = "Jeroen", email = "jeroen@flexworks.eu" }
-]
-
+authors = [{ name = "Jeroen", email = "jeroen@flexworks.eu" }]
 
 
 requires-python = ">=3.10"
 classifiers = [
-    "Programming Language :: Rust",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Programming Language :: Python :: Implementation :: PyPy",
+  "Programming Language :: Rust",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = [
-    "pytest>=8.3.4",
-    "numpy >1.24.4",
-    "pyspark>=3.5.4",
-    "duckdb>=1.1.3",
-    "polars>=1.21.0",
-    "pyarrow>=19.0.0",
+dependencies = []
+
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=8.3.4",
+  "numpy >1.24.4",
+  "pyspark>=3.5.4",
+  "duckdb>=1.1.3",
+  "polars>=1.21.0",
+  "pyarrow>=19.0.0",
 ]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
 
