--- a/crates/pyaxp/pyproject.toml
+++ b/crates/pyaxp/pyproject.toml
@@ -16,21 +16,22 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = []
 
 
-[project.optional-dependencies]
-dev = [
-  "pytest>=8.3.4",
-  "numpy >1.24.4",
-  "pyspark>=3.5.4",
-  "duckdb>=1.1.3",
-  "polars>=1.21.0",
-  "pyarrow>=19.0.0",
-]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "numpy >1.24.4",
+    "pyspark>=3.5.4",
+    "duckdb>=1.1.3",
+    "polars>=1.21.0",
+    "pyarrow>=19.0.0",
+    "pytest-cov>=6.0.0",
+]
 
 [project.urls]
 Homepage = "https://github.com/opensourceworks-org/yaxp"
