--- a/.github/workflows/yaxp-common-ci.yml
+++ b/.github/workflows/yaxp-common-ci.yml
@@ -10,7 +10,20 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: crates/yaxp-common
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Run unit tests
+        run: cargo test
+
   publish:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
