--- a/crates/pyaxp/pyproject.toml
+++ b/crates/pyaxp/pyproject.toml
@@ -31,6 +31,9 @@ dev = [
     "polars>=1.21.0",
     "pyarrow>=19.0.0",
     "pytest-cov>=6.0.0",
+    "fastavro>=1.10.0",
+    "pip>=25.0",
+    "avro>=1.12.0",
 ]
 
 [project.urls]
