--- a/crates/yaxp-cli/Cargo.toml
+++ b/crates/yaxp-cli/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "4.5.23", features = ["derive"] }
 yaxp-common = { path = "../yaxp-common", version = "0.1.16" }
 serde = { version = "1.0.217", features = ["derive"] }
 encoding_rs = "0.8.35"
+serde_json = "1.0.138"
