--- a/crates/pyaxp/Cargo.toml
+++ b/crates/pyaxp/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "pyaxp"
-version = "0.1.18"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
 pyo3 = { version = "0.23.3", features = ["extension-module", "serde"] }
-yaxp-core = { path = "../yaxp-core", version = "0.1.2" }
+yaxp-core = { path = "../yaxp-core", version = "0.1.3", features = ["python"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 arrow = "54.1.0"
