--- a/crates/yaxp-core/Cargo.toml
+++ b/crates/yaxp-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yaxp-core"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 authors = ["Jeroen <jeroen@flexworks.eu>"]
 description = "<yaxp-cli ⚡> Yet Another XML Parser"
@@ -14,7 +14,7 @@ rayon = "1.10.0"
 roxmltree = "0.20.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
-pyo3 = { version = "0.23.3", features = ["extension-module", "serde"], optional = true  }
+pyo3 = { version = "0.23.3", features = ["extension-module", "serde", "indexmap"], optional = true  }
 indexmap = "2.7.0"
 polars = { version = "0.46.0", features = ["dtype-decimal"], default-features = false }
 encoding_rs_io = "0.1.7"
