--- a/.github/workflows/yaxp-cli-cd.yml
+++ b/.github/workflows/yaxp-cli-cd.yml
@@ -178,7 +178,8 @@ jobs:
   #         path: target/macos/macos-arm64-${{ env.VERSION }}.tar.gz
 
   release:
-    needs: [build-linux-x64, build-linux-arm64, build-linux-armv7, build-windows-x64, build-macos-arm64]
+    needs: [build-linux-x64]
+    # needs: [build-linux-x64, build-linux-arm64, build-linux-armv7, build-windows-x64, build-macos-arm64]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
