--- a/.github/workflows/yaxp-cli-cd.yml
+++ b/.github/workflows/yaxp-cli-cd.yml
@@ -193,14 +193,17 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/}
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+
+      - name: Show downloaded artifacts
+        run: ls -R dist
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            target/linux/linux-x64-${{ steps.version.outputs.version }}.tar.gz
-            # target/linux/linux-arm64-${{ steps.version.outputs.version }}.tar.gz
-            # target/linux/linux-armv7-${{ steps.version.outputs.version }}.tar.gz
-            # target/windows/windows-x64-${{ steps.version.outputs.version }}.tar.gz
-            # target/macos/macos-arm64-${{ steps.version.outputs.version }}.tar.gz
+          files: dist/**/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
