fix: use correct token

--- a/.github/workflows/yaxp-cli-cd.yml
+++ b/.github/workflows/yaxp-cli-cd.yml
@@ -206,4 +206,4 @@ jobs:
         with:
           files: dist/**/*.tar.gz
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_API_TOKEN }}
